--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "byte-sized-business-boost",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "seed": "node src/seed.js",
+    "start": "node server.js",
+    "seed": "node seed.js",
     "test": "mocha --timeout 5000"
   },
   "author": "Mohid Faisal Mushtaq",
