--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 MONGODB_URI = MongoDB URI used to connect to the database
 PORT = Port number to run on localhost
 GOOGLE_CLIENT_ID = Google client ID used for allowing users to login using google
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=yourgmail@gmail.com
+SMTP_PASS=<Google App Password>
+SMTP_FROM=yourgmail@gmail.com
