--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.2",
     "google-auth-library": "^10.5.0",
     "mongoose": "^9.1.5",
+    "nodemailer": "^8.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -61,7 +62,7 @@
       "artifactName": "${productName}-Setup-${version}.${ext}"
     },
     "nsis": {
-      "oneClick": false, 
+      "oneClick": false,
       "allowToChangeInstallationDirectory": true,
       "deleteAppDataOnUninstall": true
     },
