Updated profile pictures for non-guest users that didn't use google login

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,7 @@ MONGODB_URI = MongoDB URI used to connect to the database
 PORT = Port number to run on localhost
 GOOGLE_CLIENT_ID = Google client ID used for allowing users to login using google
 
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=yourgmail@gmail.com
-SMTP_PASS=<Google App Password>
-SMTP_FROM=yourgmail@gmail.com
+GMAIL_USER = gmailuser@gmail.com
+GMAIL_APP_PASSWORD = application password
+GMAIL_FROM = Byte Sized Business Boost <gmailuser@gmail.com>
+SMTP_TIMEOUT_MS = 10000
